fixed footer spacing

--- a/client/src/components/Styles/Footer.css
+++ b/client/src/components/Styles/Footer.css
@@ -1,6 +1,6 @@
 footer {
     width: 100%;
-    margin-top: 50px;
+    margin-top: 100px;
     padding-top: 50px;
     padding-bottom: 50px;
     text-align: center;
